k8s/istio/events-ui-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: events-ui
  namespace: default
spec:
  host: events-ui
  subsets:
    - name: stable
      labels:
        version: v1
    - name: canary
      labels:
        version: v2
