k8s/istio/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app-routes
  namespace: ticketmaster
spec:
  hosts:
    - "app.local"
  gateways:
    - istio-system/app-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: api-gateway.ticketmaster.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: events-ui-service.ticketmaster.svc.cluster.local
            port:
              number: 80
